--- a/css/main.css
+++ b/css/main.css
@@ -1801,7 +1801,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #6bbfa6;
+  background: #e7e5ad;
 }
 .links-of-blogroll {
   font-size: 13px;
