--- a/css/main.css
+++ b/css/main.css
@@ -1801,7 +1801,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffff49;
+  background: #ff93ff;
 }
 .links-of-blogroll {
   font-size: 13px;
