--- a/css/main.css
+++ b/css/main.css
@@ -284,8 +284,8 @@ a {
   word-wrap: break-word;
 }
 a:hover {
-  color: #222;
-  border-bottom-color: #222;
+  color: #55abed;
+  border-bottom-color: #55abed;
 }
 blockquote {
   margin: 0;
@@ -321,7 +321,7 @@ dd {
   padding: 0;
 }
 kbd {
-  border: 1px solid #ccc;
+  border: 1px solid #55abed;
   border-radius: 0.2em;
   box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1);
   background-color: #f9f9f9;
@@ -687,14 +687,14 @@ pre .javascript .function {
 .page-post-detail .post-type-quote blockquote::before {
   top: -20px;
   background-image: url("../images/quote-l.svg");
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #55abed;
 }
 .blockquote-center::after,
 .page-home .post-type-quote blockquote::after,
 .page-post-detail .post-type-quote blockquote::after {
   bottom: -20px;
   background-image: url("../images/quote-r.svg");
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #55abed;
   background-position: 100% 8px;
 }
 .blockquote-center p,
@@ -941,7 +941,7 @@ pre .javascript .function {
   padding: 0 20px;
   font-size: 14px;
   color: #fff;
-  background: #222;
+  background: #55abed;
   border: 2px solid #555;
   text-decoration: none;
   border-radius: 0;
@@ -952,9 +952,9 @@ pre .javascript .function {
 }
 .btn:hover,
 .post-button .btn:hover {
-  border-color: #222;
+  border-color: #55abed;
   color: #fff;
-  background: #222;
+  background: #55abed;
 }
 .btn-bar {
   display: block;
@@ -1004,7 +1004,7 @@ pre .javascript .function {
 .pagination .prev:hover,
 .pagination .next:hover,
 .pagination .page-number:hover {
-  border-top-color: #222;
+  border-top-color: #55abed;
 }
 .pagination .space {
   padding: 0;
@@ -1018,8 +1018,8 @@ pre .javascript .function {
 }
 .pagination .page-number.current {
   color: #fff;
-  background: #ccc;
-  border-top-color: #ccc;
+  background: #55abed;
+  border-top-color: #55abed;
 }
 @media (max-width: 767px) {
   .pagination {
@@ -1036,7 +1036,7 @@ pre .javascript .function {
   .pagination .prev:hover,
   .pagination .next:hover,
   .pagination .page-number:hover {
-    border-bottom-color: #222;
+    border-bottom-color: #55abed;
   }
 }
 .comments {
@@ -1057,7 +1057,7 @@ pre .javascript .function {
   z-index: 1050;
   padding: 0 6px;
   width: 24px;
-  background: #222;
+  background: #55abed;
   font-size: 12px;
   opacity: 0.6;
   color: #fff;
@@ -1090,7 +1090,7 @@ pre .javascript .function {
 }
 .headband {
   height: 3px;
-  background: #222;
+  background: #55abed;
 }
 .site-meta {
   margin: 0;
@@ -1106,7 +1106,7 @@ pre .javascript .function {
   display: inline-block;
   padding: 0 40px;
   color: #fff;
-  background: #222;
+  background: #55abed;
   border-bottom: none;
 }
 .brand:hover {
@@ -1129,7 +1129,7 @@ pre .javascript .function {
 .site-subtitle {
   margin-top: 10px;
   font-size: 13px;
-  color: #ddd;
+  color: $fff;
 }
 .use-motion .brand {
   opacity: 0;
@@ -1204,7 +1204,7 @@ pre .javascript .function {
 }
 .menu .menu-item a:hover,
 .menu-item-active a {
-  border-bottom-color: #222;
+  border-bottom-color: #55abed;
 }
 .menu .menu-item .fa {
   margin-right: 5px;
@@ -1298,7 +1298,7 @@ pre .javascript .function {
 .posts-expand .post-body h6 .header-anchor {
   float: right;
   margin-left: 10px;
-  color: #ccc;
+  color: #55abed;
   border-bottom-style: none;
   visibility: hidden;
 }
@@ -1393,7 +1393,7 @@ pre .javascript .function {
   transition-timing-function: ease-in-out;
   transition-delay: 0s;
   transition-property: border;
-  border-bottom: 1px dashed #ccc;
+  border-bottom: 1px dashed #55abed;
 }
 .posts-collapse .post-header::before {
   content: " ";
@@ -1415,7 +1415,7 @@ pre .javascript .function {
   border-bottom-color: #666;
 }
 .posts-collapse .post-header:hover::before {
-  background: #222;
+  background: #55abed;
 }
 .posts-collapse .post-meta {
   position: absolute;
@@ -1587,7 +1587,7 @@ pre .javascript .function {
   border-bottom: none;
 }
 .post-nav-item a:hover {
-  color: #222;
+  color: #55abed;
   border-bottom: none;
 }
 .post-nav-item a:active {
@@ -1617,7 +1617,7 @@ pre .javascript .function {
   margin: 80px auto 60px;
   width: 8%;
   height: 1px;
-  background: #ccc;
+  background: #55abed;
   text-align: center;
 }
 .post:last-child .post-eof.post-eof.post-eof {
@@ -1672,7 +1672,7 @@ pre .javascript .function {
   width: 0;
   z-index: 1040;
   box-shadow: inset 0 2px 6px #000;
-  background: #222;
+  background: #55abed;
   -webkit-transform: translateZ(0);
 }
 .sidebar a {
@@ -1712,7 +1712,7 @@ pre .javascript .function {
   width: 14px;
   height: 14px;
   padding: 5px;
-  background: #222;
+  background: #55abed;
   line-height: 0;
   z-index: 1050;
   cursor: pointer;
@@ -1751,11 +1751,11 @@ pre .javascript .function {
 .site-author-name {
   margin: 0;
   text-align: center;
-  color: #222;
+  color: #55abed;
   font-weight: 600;
 }
 .site-description {
-  margin-top: 0;
+  margin-top: 10px;
   text-align: center;
   font-size: 13px;
   color: #999;
@@ -1828,7 +1828,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #2d67ff;
+  background: #ad0993;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -1913,7 +1913,7 @@ pre .javascript .function {
   transition-delay: 0s;
   transition-property: all;
   color: #666;
-  border-bottom-color: #ccc;
+  border-bottom-color: #55abed;
 }
 .post-toc ol a:hover {
   color: #000;
@@ -2758,7 +2758,7 @@ pre .javascript .function {
 .site-meta {
   padding: 20px 0;
   color: #fff;
-  background: #222;
+  background: #55abed;
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .site-meta {
@@ -2890,7 +2890,7 @@ pre .javascript .function {
   color: #555;
 }
 .sidebar a:hover {
-  color: #222;
+  color: #55abed;
 }
 .site-state-item {
   padding: 0 10px;
@@ -2903,8 +2903,8 @@ pre .javascript .function {
   text-decoration: underline;
 }
 .feed-link {
-  border-top: 1px dotted #ccc;
-  border-bottom: 1px dotted #ccc;
+  border-top: 1px dotted #55abed;
+  border-bottom: 1px dotted #55abed;
   text-align: center;
 }
 .feed-link a {
@@ -2958,7 +2958,7 @@ pre .javascript .function {
   text-align: center;
   margin-top: 20px;
   padding: 3px 0 0;
-  border-top: 1px dotted #ccc;
+  border-top: 1px dotted #55abed;
 }
 .links-of-blogroll-title {
   margin-top: 0;
