--- a/css/main.css
+++ b/css/main.css
@@ -1955,7 +1955,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #4ecfb0;
+  background: #a205ff;
 }
 .links-of-blogroll {
   font-size: 13px;
